# open-fil-pilote-esp-idf

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/ofp-certificates/: CMakeLists.txt  README.md  gen.py  info.txt
components/ofp-website/: CMakeLists.txt  ofp.html  ofp.js  ofp_reload.html  ofp_wait.html
components/ofp-website/api/v1/: accounts  hardware  hardware_params.json  plannings
docs/: api.txt  nvs.txt
main/: CMakeLists.txt  Kconfig  api.c  api.h  api_accounts.c  api_accounts.h  api_hw.c  api_hw.h  api_mgmt.c  api_mgmt.h  api_plannings.c  api_plannings.h  api_zones.c  api_zones.h  console.c  console.h  fwupd.c  fwupd.h  hw_esp32.c  hw_esp32.h  hw_m1e1.c  hw_m1e1.h  m_dns.c  m_dns.h  main.c  ofp.c  ofp.h  s2p_595.c  s2p_595.h  sntp.c  sntp.h  storage.c  storage.h  str.c  str.h  test.c  uptime.c  uptime.h  utils.c  utils.h  (+2 more)
main/web/: app.js  ofp.html  ofp.js
main/web/api/v1/: orders  planning_details.json
main/web/samples/: accounts.json  hardware_current.json  hardware_parameters_m1e1.json  hardware_supported.json  hardware_types.json  orders.json  planning_details.json  status.json  zoneTypes.json  zones.json  zonesConfig.json  zones_config.json  zones_override.json  zones_override_none.json  zones_state.json
mockserver/: README.md  db.js  db.json
